--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,8 @@
   "require": {
     "php": "^8.2",
     "guzzlehttp/guzzle": "^7.8",
+    "intervention/image": "^3.11",
+    "intervention/image-laravel": "^1.5",
     "laravel/framework": "^11.9",
     "laravel/sanctum": "^4.0",
     "laravel/tinker": "^2.9",
