--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
     "laravel/framework": "^11.9",
     "laravel/sanctum": "^4.2",
     "laravel/tinker": "^2.9",
+    "livewire/livewire": "^3.6",
     "nesbot/carbon": "^2.53.1",
     "openai-php/laravel": "^0.16.0",
     "stripe/stripe-php": "^17.1",
